# shy

./: .ICEauthority  .Xauthority  .bash_history  .bashrc  .gitconfig  .viminfo  .wget-hsts  .xinputrc  .xsession-errors.old  README.md  a.out  jetson_clocks.sh  jpeg2000.doc  jpeg20001.odt  link.txt
.cache/: event-sound-cache.tdb.ae15719763c84b35196c20a95728b806.aarch64-unknown-linux-gnu  zeitgeist-vacuum.stamp
.config/: mimeapps.list
.ssh/: id_rsa  t  (+3 more)
NVIDIA_CUDA-8.0_Samples/gpu_jpeg2k/tier1/coeff_coder/: CMakeLists.txt  gpu_coeff_coder2.cu  gpu_mq-coder.cuh  test_gpu_coder.cpp  test_gpu_coder.cpp.config  test_gpu_coder.cpp.config.dependers  test_gpu_coder.cpp.decoder  test_gpu_coder.cpp.decoder.dependers  test_gpu_coder.cpp.dwt  test_gpu_coder.cpp.dwt.dependers  test_gpu_coder.cpp.encoder  test_gpu_coder.cpp.encoder.dependers  test_gpu_coder.cpp.file_access  test_gpu_coder.cpp.file_access.dependers  test_gpu_coder.cpp.file_format  test_gpu_coder.cpp.file_format.dependers  test_gpu_coder.cpp.gpu_bpc  test_gpu_coder.cpp.gpu_bpc.dependers  test_gpu_coder.cpp.gpu_coeff_coder  test_gpu_coder.cpp.gpu_coeff_coder.dependers  test_gpu_coder.cpp.jp2decoder  test_gpu_coder.cpp.jp2decoder.dependers  test_gpu_coder.cpp.klt  test_gpu_coder.cpp.klt.dependers  test_gpu_coder.cpp.misc  test_gpu_coder.cpp.misc.dependers  test_gpu_coder.cpp.preprocessing  test_gpu_coder.cpp.preprocessing.dependers  test_gpu_coder.cpp.tier1  test_gpu_coder.cpp.tier1.dependers  test_gpu_coder.cpp.tier2  test_gpu_coder.cpp.tier2.dependers  test_gpu_coder.cpp.types  test_gpu_coder.cpp.types.dependers
(+8352 files in other folders)
